grok/tests/syntaxerror/syntaxerror.seru
function DoSomething(foobars int) {
    /// [f]
    foobars.
}